--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Hello World!</h1>
 <h2>Hello new branch</h2>
+<h2>add smth to the same git commit</h2>
 <script src="index.js"></script>
 </body>
 </html>
